Fixes after first deploy

--- a/tasks/cache_in_memory.yml
+++ b/tasks/cache_in_memory.yml
@@ -3,5 +3,6 @@
     name: /var/cache/knot-resolver
     src: tmpfs
     fstype: tmpfs
-    opts: "rw,size={{ dns_cache_size }}M,uid=knot-resolver,gid=knot-resolver,nosuid,nodev,noexec,mode=0700"
+    opts: "rw,size={{ dns_cache_size | int + 16 }}M,uid=knot-resolver,gid=knot-resolver,nosuid,nodev,noexec,mode=0700"
     state: mounted
+  become: yes
